uoamhub (0.9.1) unstable; urgency=low

  * use getopt() if getopt_long() is not available
  * fixed long pid_t warnings

 --

uoamhub (0.9) unstable; urgency=low

  * initial release

 -- Max Kellermann <max@duempel.org>  Fri, 24 Dec 2004 02:35:29 +0100