@@ -2,6 +2,7 @@ uoamhub (0.9.1) unstable; urgency=low
 
   * use getopt() if getopt_long() is not available
   * fixed long pid_t warnings
+  * use random() if /dev/random does not exist
 
  --
 
